# yate

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: app.rs  crossterm_backend.rs  main.rs  ui.rs
src/event_handler/: io.rs  key.rs  mod.rs
src/state/: command.rs  mod.rs  state.rs  tabs.rs
src/tabs/: mod.rs  state.rs
src/ui/: draw.rs  mod.rs  tabs.rs
