[package]
name = "yate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.26", features = ["serde"] }
ratatui = "0.20"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_with = { version = "3.0.0", features = ["json"] }

